<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:xliff="http://schemas.android.com/apk/res-auto">

    <!--General-->
    <string name="app_name">Sunshine</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="action_refresh">Refresh</string>
    <string name="action_map">Map</string>
    <string name="action_share">Share</string>
    <string name="title_activity_detail">Details</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Date label when displaying today's weather forecast [CHAR LIMIT=20] -->
    <string name="today">Today</string>

    <!-- Date label when displaying tomorrow's weather forecast [CHAR LIMIT=20] -->
    <string name="tomorrow">Tomorrow</string>

    <!-- Date format for displaying day of week and date (i.e. Mon Jun 1) [CHAR LIMIT=20] -->
    <string name="format_full_friendly_date"><xliff:g id="day">%1$s</xliff:g>, <xliff:g id="date">%2$s</xliff:g></string>

    <!--Temperature format. \u00B0 is the degree symbol-->
    <string name="format_temperature"><xliff:g id="temp">%1.0f</xliff:g>\u00B0</string>

    <!-- Windspeed formats -->
    <!-- Wind in mph [CHAR LIMIT=25] -->
    <string name="format_wind_mph">
     Wind: <xliff:g id="speed">%1$1.0f</xliff:g> mph <xliff:g id="direction">%2$s</xliff:g>
    </string>

    <!-- Wind in kph [CHAR LIMIT=25] -->
    <string name="format_wind_kmh">
     Wind: <xliff:g id="speed">%1$1.0f</xliff:g> km/h <xliff:g id="direction">%2$s</xliff:g>
    </string>

    <!-- Pressure format CHAR LIMIT=25] -->
    <string name="format_pressure">Pressure: <xliff:g id="pressure">%1.0f</xliff:g> hPa</string>

    <!-- Humidity format CHAR LIMIT=25]-->
    <string name="format_humidity">Humidity: <xliff:g id="humidity">%1.0f</xliff:g> %%</string>

    <!--Settings Header Bars-->
    <string name="settings_header_general">general</string>

    <!--Location Setting-->
    <string name="pref_location_key">Location</string>
    <string name="pref_location_label" translatable="false">location</string>
    <string name="pref_location_default" translatable="false">75077</string>

    <!--Units Setting-->
    <string name="pref_units_label">units</string>
    <string name="pref_units_key">metric</string>
    <string name="pref_units_metric">metric</string>
    <string name="pref_units_imperial">imperial</string>
    <string-array name="pref_units_value">
        <item>metric</item>
        <item>imperial</item>
    </string-array>
    <string-array name="pref_units_options">
        <item>metric</item>
        <item>imperial</item>
    </string-array>

    <!--# of Days Setting-->
    <string name="pref_days_label">days</string>
    <string name="pref_days_key">days</string>
    <string name="pref_days_7">7</string>
    <string name="pref_days_5">5</string>
    <string-array name="pref_days_value">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
    </string-array>
    <string-array name="pref_days_options">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
    </string-array>

    <!--Theme Setting-->
    <string name="pref_theme_label">theme</string>
    <string name="pref_theme_key">theme</string>
    <string name="pref_theme_light">light</string>
    <string name="pref_theme_dark">dark</string>
    <string-array name="pref_theme_value">
        <item>light</item>
        <item>dark</item>
        <item>black</item>
    </string-array>
    <string-array name="pref_theme_options">
        <item>light</item>
        <item>dark</item>
        <item>black</item>
    </string-array>

    <color name="myColor">#00cc00</color>
</resources>
